--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@keyframes flash {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.25;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .App {
     text-align: center;
 }
@@ -45,14 +57,11 @@
     width: 60vw;
     height: 60vh;
 }
+.button-control {
+    cursor: pointer;
+}
 
 .red {
-    /* width: 0;
-    height: 0;
-    border-left: 75px solid transparent;
-    border-right: 75px solid transparent;
-    border-top: 100px solid red;
-    border-radius: 50%; */
     background-color: red;
 }
 .blue {
@@ -68,8 +77,7 @@
 }
 
 .isFlashing {
-    border: solid 3px black;
-    opacity: 0.5;
+    animation: 0.3s linear flash;
 }
 .container {
     height: 85vh;
@@ -77,7 +85,7 @@
 
 .play {
     font-size: 2rem;
-    width: 15vw;
+    width: 25vw;
     height: 15vh;
     background-color: orange;
     border-radius: 2.5%;
