[wip] adding func for play button classNames and adding disabled ux]

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,10 @@
 .button-control {
     cursor: pointer;
 }
+.disabled {
+    background-color: gray !important;
+    cursor: none !important;
+}
 
 .red {
     background-color: red;
