[wip] on updating ux messaging of heading and play button for game state

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,9 @@
     background-color: gray !important;
     cursor: none !important;
 }
+.gameNotInPlay {
+    cursor: not-allowed !important;
+}
 
 .red {
     background-color: red;
