--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,105 @@
 @keyframes flash {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0.25;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-    height: 10vmin;
-    pointer-events: none;
+  height: 10vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-    color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .button-container {
-    margin: 0 auto 20px;
-    display: grid;
-    grid-template-rows: repeat(2, 50%);
-    grid-template-columns: repeat(2, 50%);
-    width: 60vw;
-    height: 60vh;
+  margin: 0 auto 20px;
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: repeat(2, 50%);
+  width: 60vw;
+  height: 60vh;
 }
 .button-control {
-    cursor: pointer;
+  cursor: pointer;
 }
 .disabled {
-    background-color: gray !important;
-    cursor: none !important;
+  background-color: gray !important;
+  cursor: none !important;
 }
 
 .red {
-    background-color: red;
+  background-color: red;
 }
 .blue {
-    background-color: blue;
+  background-color: blue;
 }
 
 .green {
-    background-color: green;
+  background-color: green;
 }
 
 .yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
 
-.isFlashing {
-    animation: 0.3s linear flash;
+.flash {
+  animation: 0.3s linear flash;
 }
 .container {
-    height: 85vh;
+  height: 85vh;
 }
 
 .play {
-    font-size: 2rem;
-    width: 25vw;
-    height: 15vh;
-    background-color: orange;
-    border-radius: 2.5%;
-    cursor: pointer;
+  font-size: 2rem;
+  width: 25vw;
+  height: 15vh;
+  background-color: orange;
+  border-radius: 2.5%;
+  cursor: pointer;
 }
 .play:hover,
 .button-container > *:hover {
-    opacity: 0.75;
+  opacity: 0.75;
 }
 
 .font-family {
-    font-family: fantasy;
+  font-family: fantasy;
 }
